fix dark mode style

--- a/src/styl/_body.styl
+++ b/src/styl/_body.styl
@@ -46,8 +46,8 @@ body
       img, kbd
         filter brightness($dark-image-brightness) !important
 
-    .index ul:not(.toc) .more span, .vssue-pagination-select
-      background-color $dark-background-color !important
+    main, .index ul:not(.toc) .more span, .vssue-pagination-select
+      background-color $dark-main-background-color !important
 
     footer
       border-top-color $dark-border-color !important
